@@ -20,70 +20,10 @@ Contact: yuvraaj@gmail.com
 */
 
 import Qt 4.7
+import com.nokia.meego 1.0
 
-BorderImage {
-    id: button
+// QGVButton is just a one-to-one map to the Meego qt-components Button item
 
-    source: "pushbutton_normal.svg"
-    border {
-        left: 5
-        right: 5
-        bottom: 5
-        top: 5
-    }
-
-    height: 22 * g_hMul
-    width: 100 * g_wMul
-    smooth: true
-
-    // Main text in the button
-    property string text: "Button"
-
-    // Aliases to the mText
-    property alias aliasTextElide: mText.elide
-
-    // Button emits clicks, but we also mention what is the text to display
-    signal clicked
-    signal pressHold
-
-    onWidthChanged: updateTextWidth();
-    function updateTextWidth() {
-        if (mText.elide != Text.ElideNone) {
-            // Without this, the elide value is pointless
-            mText.width = button.width
-        }
-    }
-
-    // The main text
-    Text {
-        id: mText
-        text: button.text
-        color: "white"
-
-        // This is specifically for the current phone number button
-        onTextChanged: button.updateTextWidth();
-
-        anchors.horizontalCenter: parent.horizontalCenter
-        anchors.verticalCenter: parent.verticalCenter
-
-        font { family: "Nokia Sans"; pointSize: (8 * g_fontMul) }
-        smooth: true
-    }// Text
-
-    MouseArea {
-        id: mouseArea
-        anchors.fill: parent
-
-        onClicked: button.clicked();
-        onPressAndHold: button.pressHold();
-    }// MouseArea
-
-    Keys.onReturnPressed: button.clicked();
-    Keys.onSpacePressed: button.clicked();
-
-    states: State {
-        name: "pressed"
-        when: mouseArea.pressed
-        PropertyChanges { target: button; source: "pushbutton_pressed.svg" }
-    }
-}// Rectangle
+Button {
+    id: container
+}//Button
